Working on setup and tmux plugins

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,6 +5,16 @@ set-option -g history-limit 100000
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",alacritty:Tc"
 
+# tmux plugin manager
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# tmux-resurrect configurations
+set -g @continuum-restore 'on'
+# Needs tpope/vim-obsession
+#set -g @resurrect-strategy-nvim 'session'
+
 # unbind the prefix and bind it to Ctrl-a like screen
 unbind C-b
 set -g prefix C-a
@@ -38,12 +48,5 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-######################
-### DESIGN CHANGES ###
-######################
-
-# Avoid date/time taking up space
-#set -g status-right ''
-#set -g status-right-length 0
-
-# source-file ~/.config/base16-shell/templates/tmux/colors/base16-gruvbox-dark-hard.conf
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
